MDEV-7785: errorneous -> erroneous spelling mistake